<resources>
    <string name="app_name">БГТУ</string>
    <string name="Glav">Главная</string>
    <string name="Факультеты">Факультеты</string>
    <string name="Галерея">Галерея</string>
    <string name="Расписание_занятий">Расписание занятий</string>
    <string name="Разное">Разное</string>
    <string name="Контакты">Контакты</string>
    <string name="Мы_на_карте">Мы на карте</string>
    <string name="ONE">1. Лесохозяйственный факультет</string>
    <string name="TWO">2. Факультет технологии и техники лесной промышленности</string>
    <string name="THREE">3. Факультет технологии органических веществ</string>
    <string name="FOUR">4. Факультет химической технологии и техники</string>
    <string name="FIVE">5. Факультет издательского дела и полиграфии</string>
    <string name="SIX">6. Инженерно-экономический факультет</string>
    <string name="SEVEN">7. Факультет информационных технологий</string>
    <string name="EIGHT">8. Заочный факультет</string>
    <string name="NINE">9. Факультет общественных профессий</string>
    <string name="TEN">10. Факультет доуниверситетской подготовки</string>
    <string name="ELEVEN">11. Деканат по работе с иностранными студентами</string>
    <string name="news_2">Конкурс проектов малых садов</string>
    <string name="news_1">ХХІІ научно-методическая конференция</string>
    <string name="news_3">Международная выставка-конгресс «Высокие технологии. Инновации. Инвестиции»</string>
    <string name="belsu">belstu</string>
    <string name="gerb">gerb</string>
    <string name="background">background</string>
    <string name="title_activity_faculties">faculties</string>
    <string name="title_activity_maps">Map</string>
    <string name="_">sob</string>
    <string name="События">События</string>
    <string name="title_activity_les">Les</string>
    <string name="kurs1">1 курс</string>
    <string name="kurs2">2 курс</string>
    <string name="kurs3">3 курс</string>
    <string name="kurs4">4 курс</string>
    <string name="k1">k1</string>
    <string name="k1_1">k1_1</string>
    <string name="k4">k4</string>
    <string name="k4_1">k4_1</string>
    <string name="kontakti">Контакты</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="splashscreen">gerb</string>
    <string name="by_Dima_Shumanski">App by Dima Shumanski</string>
    <string name="zagl">Лесохозяйственный факультет</string>
    <string name="data">Дата создания:</string>
    <string name="data1">1 октября 1930 года</string>
    <string name="sost">Состав факультета:</string>
    <string name="sost1">В состав факультета входят 7 кафедр:\n• Кафедра лесоводства\n• Кафедра охотоведения\n• Кафедра лесоустройства\n• Кафедра лесозащиты и древесиноведения\n• Кафедра ландшафтного проектирования и садово-паркового строительства\n• Кафедра лесных культур и почвоведения\n• Кафедра туризма и природопользования</string>
    <string name="prepod">Количество преподавателей:</string>
    <string name="prepod1">95, в том числе 9 докторов наук и профессоров, 55 доцентов и кандидатов наук</string>
    <string name="stud">Количество студентов:</string>
    <string name="stud1">более 950</string>
    <string name="istor">Историческая справка:</string>
    <string name="istor1">\tЛесохозяйственный факультет является старейшим факультетом университета. Он ведет свою историю с 1930 года, когда на базе Горецкой сельскохозяйственной академии был создан Белорусский лесотехнический институт. До 1961 года в этом университете готовились кадры для лесного комплекса республики. \n\tОсновным направлением работы коллектива факультета в последние годы является создание и совершенствование многоуровневой системы подготовки специалистов лесного хозяйства, соответствующей мировым стандартам.</string>
    <string name="spec">Специальности:</string>
    <string name="spec1">• 1-75 01 01 «Лесное хозяйство» (Квалификация «Инженер лесного хозяйства»), специализации:\n\t1. 1-75 01 01 01 «Лесоведение и лесоводство»\n\t2. 1-75 01 01 02 «Лесоохотничье хозяйство и побочное пользование лесом»\n\t3. 1-75 01 01 03 «Защита леса» 1-75 01 01 04 «Информационные системы в лесном хозяйстве»\n\t4. 1-75 01 01 06 «Лесовосстановление и питомническое хозяйство»\n\t5. 1-75 02 01 «Садово-парковое строительство» (Квалификация «Инженер садово-паркового строительства»)\n• 1-89 02 02 «Туризм и природопользование» (Квалификация «Специалист по туризму и природопользованию»)</string>
    <string name="maig">Магистратура (специальности):</string>
    <string name="maig1">• 1-75 80 03 «Лесоведение и лесоводство, лесные пожары и борьба с ними»\n• 1-75 80 01 «Лесные культуры, селекция и семеноводство»\n• 1-75 80 04 «Защита растений»\n• 1-75 08 05 «Озеленение населенных пунктов»\n• 1-75 80 02 «Лесоустройство и лесная таксация»</string>
    <string name="asp">Аспирантура (специальности):</string>
    <string name="asp1">• 06.01.07 «Защита растений»\n• 06.03.02 «Лесоведение, лесоводство, лесоустройство, лесная таксация»\n• 06.03.01 «Лесные культуры, селекция, семеноводство»</string>
    <string name="napr">Основные направления научных исследований:</string>
    <string name="napr1">\tНаучные исследования на факультете направлены на разработку и внедрение новых технологий возобновления и выращивания леса, повышения его продуктивности, интегрированных методов защиты насаждений, раннего выявления повреждений, в том числе на основе анализа аэрофотоснимков, разработку научно-обоснованных систем рубок главного пользования, а также учета лесов с использованием геоинформационных систем, которые позволяют качественно повысить уровень управления лесными ресурсами за счет высокоэффективных методов анализа картографической информации и дистанционного зондирования лесов.</string>
    <string name="zagl2">Факультет технологии и техники лесной промышленности</string>
    <string name="data2">\tФакультет создан в июле 1988 г. в результате объединения двух старейших факультетов: лесоинженерного и механической технологии древесины, основы которых были заложены в 1930 г.</string>
    <string name="sost2">В состав факультета входят 8 кафедр: \n• Кафедра лесных дорог и организации вывозки древесины \n• Кафедра лесных машин и технологии лесозаготовок \n• Кафедра технологии деревообрабатывающих производств \n• Кафедра технологии и дизайна изделий из древесины\n• Кафедра деревообрабатывающих станков и инструментов \n• Кафедра энергосбережения, гидравлики и теплотехники \n• Кафедра материаловедения и технологии металлов \n• Кафедра деталей машин и подъемно-транспортных устройств</string>
    <string name="prepod2">более 90, в том числе 9 докторов наук и профессоров, 64 кандидата наук и доцента</string>
    <string name="stud2">около 850 студентов, 6 магистрантов и 6 аспирантов</string>
    <string name="istor2">\tЗа годы своего функционирования факультетом выпущено более 16000 специалистов. В последнее время на факультете были открыты две специальности. В 1997 г. – специальность «Энергоэффективные технологии и энергетический менеджмент», специализации «Энергоэффективные технологии и энергетический менеджмент в лесном комплексе» и «Энергоэффективные технологии и энергетический менеджмент в химическом комплексе», в 1999 г. специальность «Профессиональное обучение» специализация «Деревообработка», по которым подготовка специалистов в республике раннее не велась. На факультете функционирует совет по защите докторских и кандидатских диссертаций по специальностям: 05.21.01 «Технология и машины лесозаготовок и лесного хозяйства» и 05.21.05 «Древесиноведение, технология и оборудование деревообработки». Обучение осуществляется на современном уровне по новым образовательным стандартам и новым инновационным технологиям.</string>
    <string name="spec2">• 1-46 01 01 «Лесоинженерное дело» (выпускающие кафедры лесных машин и технологии лесозаготовок, лесных дорог и организации вывозки древесины) \n• 1-36 05 01«Машины и оборудование лесного комплекса» (выпускающие кафедры лесных машин и технологии лесозаготовок и деревообрабатывающих станков и инструментов) \n• 1-46 01 02 «Технология деревообрабатывающих производств» (выпускающие кафедры технологии деревообрабатывающих производств и технологии и дизайна изделий из древесины) \n• 1-08 01 01-04 «Профессиональное обучение» (деревообработка) (выпускающая кафедра технологии и дизайна изделий из древесины) \n• 1-43 01 06 «Энергоэффективные технологии и энергетический менеджмент» (выпускающая кафедра энергосбережения, гидравлики и теплотехники).</string>
    <string name="maig2">• 1-36 80 05 «Технология и машины лесозаготовок и лесного хозяйства» \n• 1-46 80 01 «Древесиноведение, технология и оборудование деревообработки» \n• 1-43 80 02 «Энергоэффективные системы и комплексы»</string>
    <string name="asp2">• 05.21.01 – Технология и машины лесозаготовок и лесного хозяйства (технические науки) \n• 05.21.05 – Древесиноведение, технология и оборудование деревопереработки (технические науки) \n• 01.04.14 – Теплофизика и теоретическая теплотехника</string>
    <string name="napr2">\tНаучные основы ресурсосберегающих и экологически безопасных технологий, транспортных систем и оборудования для переработки древесного сырья на инновационную и экспортоориентированную продукцию, обеспечивающих рациональное использование сырьевых, энергетических и трудовых ресурсов</string>
    <string name="kontakti2">Учреждение образования «Белорусский государственный технологический университет» \n\nЮридический адрес: УО «БГТУ», ул.Свердлова, 13а, 220006, г.Минск, Республика Беларусь \nтел./факс 327-62-17 \n\nРектор Войтов Игорь Витальевич \nWEB-страница https://www.belstu.by \nE-mail: rector@belstu.by</string>
    <string name="v_razrab">В разработке</string>
    <string name="zag13">Факультет информационных технологий</string>
    <string name="data3">Факультет создан в мае 2014 г.</string>
    <string name="sost3">В состав факультета входят 5 кафедр: \n• Кафедра информационных систем и технологий\n• Кафедра информатики и веб-дизайна \n• Кафедра физики \n• Кафедра инженерной графики \n• Кафедра история Беларуси и политологии</string>
    <string name="prepod3">более 70, в том числе 8 докторов наук и профессоров, 48 кандидата наук и доцента</string>
    <string name="stud3">544 студента, 2 магистранта и 3 аспиранта</string>
    <string name="istor3">-</string>
    <string name="spec3">Факультет ИТ готовит специалистов по 4 специальностям: \n• 1-40 05 01 «Информационные системы и технологии» (выпускающая кафедра информационных систем и технологий) \n• 1-98 01 03 «Программное обеспечение информационной безопасности мобильных систем» (выпускающая кафедра информационных систем и технологий) \n• 1-40 01 01 «Программное обеспечение информационных технологий» (выпускающая кафедра информационных систем и технологий) \n• 1-47 01 02 «Дизайн электронных и веб-изданий» (выпускающая кафедра информационных систем и технологий)</string>
    <string name="maig3">• 1-31 80 10 Теоретические основы информатики \n• 1-40 80 02 Системный анализ, управление и обработка информации (по отраслям)</string>
    <string name="asp3">• 05.13.05 Элементы и устройства вычислительной техники и систем управления</string>
    <string name="napr3">• информационные и инновационные технологии в образовании \n• защита информации в компьютерных системах и сетях \n• имитационные модели и программные средства для разработки радиолокационных систем и бортовой аппаратуры спутников навигационных систем</string>
    <string name="zag14">Факультет химической технологии и техники</string>
    <string name="data4">1968 г.</string>
</resources>